--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 <section class="section skills">
   <div class="container">
     <h2>Skills</h2>
-    </div>
     <div class="skill-category">
       <h3>Technical Proficiency</h3>
       <p>Canva, basic html and VBA, Power point</p>
@@ -60,16 +59,16 @@
   <div class="container">
     <h2>Experience</h2>
     <div class="card">
-      <h3>School Treasure</h3>
-      <p><strong>Thailand, Aug 2022 – March 2023</strong></p>
+      <h3>Sunday School Teacher  </h3>
+      <p><strong>Myanmar, Aug 2020 – March 2021</strong></p>
       <ul>
-        <li>Manage the school budget</li>
-        <li>Record and report the school budget</li>
+        <li>Taught Bible and song to a class of 90 student</li>
+        <li>Use some posters, poems, and activities</li>
       </ul>
     </div>
     <div class="card">
       <h3>Nursery Teacher</h3>
-      <p><strong>Thailand, Jul 2023 – Jul 2024</strong></p>
+      <p><strong>Thailand, Jul 2019 – march 2020</strong></p>
       <ul>
         <li>Taught interactive basic English and Karen to a class of 20 students 
           .</li>
